[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
scraper = "0.19.0"
lazy_static = "1.4.0"
clap = { version = "4.5.16", features = ["cargo"] }
clap-cargo = "0.14.1"
polars = { version = "0.42.0", features = ["lazy"] }
